                    Changes made to Pyjamas since 0.6
                    ---------------------------------

 * Enhanced dict initialization: dict(a=1, b=2)

 * Added setFocus function to TextBoxBase to override FocusMixin.setFocus
   because FocusMixin assumes that you called Focus.createFocusable to
   create the input box.

 * Added str.isalpha and str.isupper, thanks to Marcus Brinkmann

 * Modified bootstrap.py: place absolute path in pyjsbuild.bat file to
   reference python.exe direct (thanks to Rich Newpol) closes #324

 * Added FlowPanel demo from jordanwii showing how you have to use
   a span element to Label to get round a CSS IE hack issue

 * added DOM.eventStopPropagation which sets cancelBubble in IE/MSHTML
   and calls stopPropagation everywhere else

 * Added builtin sum() function

 * Added builtin zip() function

 * Added builtin reduce() function

 * Added builtin iter() function

 * Added types set and frozenset

 * Added builtin reversed() function

 * Added fromkeys method to dict

 * Added builtin sorted() function

 * Optimized 'for x in y' loops

 * Output is packable with http://dean.edwards.name/packer/

 * JavaScriptLint checks

 * Python 2.6 TranslationError deprecation message fix

 * Added support for relative imports

 * Added insertItem to Tree, TreeItem and RootTreeItem and demo in
   KitchenSink Trees.py (thanks to Carl Roach)

 * Added arguments for instance initialization in jsObjectToPyObject

 * Implemented NotImplementedType and NotImplemented

 * Implemented an int type and a long type

 * Add support for xrange and propper range (range was in fact an xrange)

 * Add support for multiple compare (0 < n < 4)

 * Add DoubleClickListener mixin

 * Add PUT and DELETE into XMLHttpRequest (thanks to Nick <thretwon@gmail.com>)

 * Added for in tuple

 * Added support for locals()

 * Added support for slice delete

 * Added support of slice assignment

 * Added support for IfExp (inline if expression)
